[build-system]
requires = ["setuptools>=61.0", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name="owlite"
dynamic = ["version"]
description = "OwLite - No-Code AI compression Toolkit"
dependencies = [
  "onnx>=1.15, <1.17",
  "torch>=2.1.2,<2.5",
  "onnxruntime>=1.17, <1.19",
  "colored",
  "yacs",
  "tabulate",
  "requests",
  "tqdm",
  "pydantic",
  "lazy_imports",
  "numpy<2.0.0",
]
authors = [
  {name = "SqueezeBits.inc", email = "owlite@squeezebits.com"}
]
maintainers = [
  {name = "SqueezeBits.inc", email = "owlite@squeezebits.com"}
]
requires-python = ">=3.10, <3.13"
keywords=["torch", "onnx", "graph", "quantization"]
classifiers=[
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/SqueezeBits/owlite"
Documentation = "https://squeezebits.gitbook.io/owlite/quick/readme"

[project.scripts]
owlite = "owlite.core.cli.owlite_cli:main"

[tool.setuptools.dynamic]
version = {attr = "owlite.core.constants.OWLITE_VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["owlite-capi*"]

[tool.setuptools.package-data]
owlite = ["*.so"]